http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.1.B3
Date:
----------------------------------

Changes/New Features:
CAY-2592 Modeler: make all datamaps selected in global cgen tab
CAY-2593 Add tableTypes field to dbImport config in dataMap

Bug Fixes:

CAY-2417 Modeler: wrong title in attribute context menu
CAY-2553 Wrong disjoint prefetch query qualifier
CAY-2565 Can't use new generated PK properties with dot() operator
CAY-2573 DI field injection is triggered when creating sql Driver
CAY-2580 Cgen: Can't use custom templates for client mode
CAY-2582 Double insert of manyToMany relationship mapped to Set
CAY-2584 Crypto: can't use ColumnSelect with encrypted columns
CAY-2586 Char can't be materialized to EnumType in some cases
CAY-2591 Modeler: project becomes dirty after click on dbImport or cgen tab
CAY-2594 DbImport: AutoAdapter resolving inside an import operation hangs up the op on Hana DB
CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save
CAY-2596 DbImport xml config changes after dbImport plugin task execution
CAY-2600 Modeler DbImport: Can't retrieve schema for databases with no catalog support
CAY-2601 Modeler DbImport: result dialog issues
CAY-2603 NPE reloading project in the model
CAY-2605 Modeler: Unable to save - java.nio.file.InvalidPathException
CAY-2606 Can't resolve obj path with embeddable component
CAY-2608 CayenneModeler: NPE when reverse engineering with an auto-adapter DataSource
CAY-2609 Modeler: can't close dbImport result dialog window

----------------------------------
Release: 4.1.B2
Date: May 4, 2019
----------------------------------

Changes:

CAY-2570 Use MySQL adapter for latest versions of MariaDB

Bug Fixes:

CAY-2506 Java class generated for Embeddable object is not serializable
CAY-2538 Modeler: dbImport configuration unclear behavior