@@ -15,6 +15,7 @@ Date:
 Changes/New Features:
 CAY-2592 Modeler: make all datamaps selected in global cgen tab
 CAY-2593 Add tableTypes field to dbImport config in dataMap
+CAY-2611 Exclude system catalogs and schemas when run dbImport without config
 
 Bug Fixes:
 
